fix: card name overlap https://trello.com/c/2z2qnmtM

--- a/src/pages/auction/PurchaseComponent/PurchaseComponent.scss
+++ b/src/pages/auction/PurchaseComponent/PurchaseComponent.scss
@@ -67,6 +67,9 @@
 
     h6 {
       font-weight: 400;
+
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     &-remove-button {
